--- a/src/main/resources/grading.fxml
+++ b/src/main/resources/grading.fxml
@@ -12,7 +12,7 @@
       <Label layoutX="80.0" layoutY="111.0" text="Subject:" />
       <Label layoutX="79.0" layoutY="168.0" text="Student:" />
       <Label layoutX="84.0" layoutY="229.0" text="Grade:" />
-      <ComboBox fx:id="comboStudents" layoutX="176.0" layoutY="164.0" prefWidth="150.0" />
+      <ComboBox fx:id="comboStudents" layoutX="176.0" layoutY="164.0" prefHeight="26.0" prefWidth="219.0" />
       <TextField fx:id="grade" layoutX="171.0" layoutY="225.0" />
       <Label layoutX="121.0" layoutY="33.0" text="Grade your students:">
          <font>
@@ -20,7 +20,7 @@
          </font>
       </Label>
       <Button layoutX="207.0" layoutY="313.0" mnemonicParsing="false" onAction="#setGrade" text="Set grade" />
-      <ComboBox fx:id="comboSubjects" layoutX="176.0" layoutY="107.0" prefWidth="150.0" />
+      <ComboBox fx:id="comboSubjects" layoutX="176.0" layoutY="107.0" prefHeight="26.0" prefWidth="219.0" />
       <Label fx:id="lblMessage" layoutX="213.0" layoutY="275.0" text=" " />
    </children>
 </AnchorPane>
